# starter-projects

./: .gitignore  README.md
Assembly/: alphabet.asm  caesar_cipher.asm  comparison.asm  fibonacci.asm  grade.asm  hello_world.asm  makefile  printer.asm  simple_adder.asm
C/: autograd.c  caesar-cipher.c  calculator.c  hello-world.c  monte-carlo.c
C++/: caesar.cpp  calculator.cpp  decipher.cpp  decipher.py  mel.cpp  pi.cpp  test.cpp
Haskell/: CaesarCipher.hs  GuessTheNumber.hs
Haskell/monte-carlo-pi-approx/: monte-carlo-pi-approx.cabal
Haskell/monte-carlo-pi-approx/app/: Main.hs
Rust/guessing_game/: Cargo.toml
Rust/monte-carlo-pi-approximation/src/: main.rs
Rust/temperature_converter/: Cargo.toml
Rust/temperature_converter/src/: main.rs
julia/: caesar_cipher.jl
rust/cipher/: Cargo.toml
rust/cipher/src/: caesar_cipher.rs  main.rs
rust/game-of-life/: Cargo.toml
rust/game-of-life/src/: main.rs
rust/guessing_game/: Cargo.toml
rust/monte-carlo-pi-approximation/: Cargo.toml
rust/monte-carlo-pi-approximation/src/: main.rs
rust/src/: main.rs
