[package]
name = "monte-carlo-pi-approximation"
version = "0.1.0"
authors = ["xBrymer <meneses.brymer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
scan_fmt = "0.2.5"
rand = "0.7.3"
indicatif = "0.15.0"

